--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                                         <ul>
                                             <li><a href="testing-facilities.html">Testing Facilities</a></li>
                                             <li><a href="research-consultancy.html">Research & Consultancy</a></li>
-                                            <li><a href="training-industrial-visit-awareness.html">Training, Industrial Visit & Awareness</a></li>
+                                            <li><a href="training-industrial-visit-awareness.html">Training, Industrial
+                                                    Visit & Awareness</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html">Contact</a></li>
@@ -236,9 +237,9 @@
                             construction sector and
                             academic institutions with complete testing facilities for determining, understanding and
                             analyzing the structural characteristics of Glass and Glazing products.</p>
-                            <div class="button">
-                                <a style="padding: 10px;" class="thm-btn yellow-bg" href="about.html">Read More</a>
-                            </div>
+                        <div class="button">
+                            <a style="padding: 10px;" class="thm-btn yellow-bg" href="about.html">Read More</a>
+                        </div>
                     </div>
                     <!-- <div class="fact-counter">
                         <ul>
@@ -279,9 +280,14 @@
                                 <h4>Education</h4>
                             </div>
                             <div class="accord-content">
-                                <span class="text-justify">&#9642; Vision to create more engineering minds in the areas of glass façade engineering.</span> <br>
-                                <span class="text-justify">&#9642; Initiating paper presentations and mini projects for the B Tech and M Tech civil students on architectural glass and glazing systems.</span> <br>
-                                <span class="text-justify">&#9642; Organizing training programs for the B Tech and M Tech civil students to learn about the different types of glass buildings and its materials.</span>
+                                <span class="text-justify">&#9642; Vision to create more engineering minds in the areas
+                                    of glass façade engineering.</span> <br>
+                                <span class="text-justify">&#9642; Initiating paper presentations and mini projects for
+                                    the B Tech and M Tech civil students on architectural glass and glazing
+                                    systems.</span> <br>
+                                <span class="text-justify">&#9642; Organizing training programs for the B Tech and M
+                                    Tech civil students to learn about the different types of glass buildings and its
+                                    materials.</span>
                             </div>
                         </div>
                         <!--End single accordion box-->
@@ -291,8 +297,11 @@
                                 <h4>Research</h4>
                             </div>
                             <div class="accord-content">
-                                <span class="text-justify">&#9642; Supporting Bureau of Indian Standards in building code of practices for the use of structural glazing in the country through continuous research.</span> <br>
-                                <span class="text-justify">&#9642; Encouraging passionate PhD scholars ad M Tech students in the research of glass facade engineering.</span>
+                                <span class="text-justify">&#9642; Supporting Bureau of Indian Standards in building
+                                    code of practices for the use of structural glazing in the country through
+                                    continuous research.</span> <br>
+                                <span class="text-justify">&#9642; Encouraging passionate PhD scholars ad M Tech
+                                    students in the research of glass facade engineering.</span>
 
                             </div>
                         </div>
@@ -303,9 +312,14 @@
                                 <h4>Testing</h4>
                             </div>
                             <div class="accord-content">
-                                <span class="text-justify">&#9642; Introducing the Energy performance (Optical and Simulation) testing of Architectural Glass at SGRT with the support of Government, Glazing Society of India and its Industry members and partners.</span> <br>
-                                <span class="text-justify">&#9642; Augmenting the facility with the capacity for the testing of profiles (aluminium and uPVC) with the support of Glazing Society of India and its industry members and partners.</span> <br>
-                                <span class="text-justify">&#9642; Understanding the testing of the other allied materials of glazing such as structural sealants, interlayers, gaskets etc.</span>
+                                <span class="text-justify">&#9642; Introducing the Energy performance (Optical and
+                                    Simulation) testing of Architectural Glass at SGRT with the support of Government,
+                                    Glazing Society of India and its Industry members and partners.</span> <br>
+                                <span class="text-justify">&#9642; Augmenting the facility with the capacity for the
+                                    testing of profiles (aluminium and uPVC) with the support of Glazing Society of
+                                    India and its industry members and partners.</span> <br>
+                                <span class="text-justify">&#9642; Understanding the testing of the other allied
+                                    materials of glazing such as structural sealants, interlayers, gaskets etc.</span>
 
                             </div>
                         </div>
@@ -328,6 +342,13 @@
                                             <li><a href="https://www.linkedin.com/in/arul-jayachandran-sanjeevi-30382a102/?originalSubdomain=in"
                                                     target="_blank"><i class="fa fa-linkedin-square"
                                                         aria-hidden="true"></i></a></li>
+                                            </li>
+                                            <li>
+                                                <a 
+                                                    href="https://home.iitm.ac.in/aruls/"
+                                                    target="_blank"><i class="fa fa-user"
+                                                        aria-hidden="true"></i></a>
+                                            </li>   
                                             </li>
                                         </ul>
                                     </div>
@@ -520,7 +541,8 @@
                         <!--Start single testimonial item-->
                         <div class="single-testimonial-item">
                             <div class="text-box">
-                                <p>Professors and Students from different states of India and different countries visited SGRT.</p>
+                                <p>Professors and Students from different states of India and different countries
+                                    visited SGRT.</p>
                             </div>
                             <div class="img-box">
                                 <img src="img/latest-news/Picture2.jpg" alt="Client Photo">
@@ -534,7 +556,8 @@
                         <!--Start single testimonial item-->
                         <div class="single-testimonial-item">
                             <div class="text-box">
-                                <p>Ms Sasi Regama M, an UG student has undergone a training session at SGRT for 15 days under the guidance of Prof (Dr) Alagappan Ponnalagu, IIT Madras.</p>
+                                <p>Ms Sasi Regama M, an UG student has undergone a training session at SGRT for 15 days
+                                    under the guidance of Prof (Dr) Alagappan Ponnalagu, IIT Madras.</p>
                             </div>
                             <div class="img-box">
                                 <img src="img/latest-news/Picture3.jpg" alt="Client Photo">
@@ -597,7 +620,7 @@
     <!--Start Brand area-->
     <section class="brand-area">
         <div class="container">
-            <div class="sec-title center text-center">
+            <div class="sec-title">
                 <h1>Major Testing</h1>
             </div>
             <div class="row">
@@ -690,12 +713,14 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="input-field">
-                                                <input required type="text" name="name" id="name" placeholder="Your Name*">
+                                                <input required type="text" name="name" id="name"
+                                                    placeholder="Your Name*">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="input-field">
-                                                <input required type="text" name="mail" id="mail" placeholder="Email Address*">
+                                                <input required type="text" name="mail" id="mail"
+                                                    placeholder="Email Address*">
                                             </div>
                                         </div>
                                     </div>
@@ -704,7 +729,8 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="input-field">
-                                                <input required type="text" name="phnumber" id="phnumber" placeholder="Phone number*">
+                                                <input required type="text" name="phnumber" id="phnumber"
+                                                    placeholder="Phone number*">
                                             </div>
                                         </div>
                                         <!-- <div class="col-md-6">
@@ -720,7 +746,8 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12">
-                                    <textarea required name="message" id="message" placeholder="Write Your Needs..."></textarea>
+                                    <textarea required name="message" id="message"
+                                        placeholder="Write Your Needs..."></textarea>
                                 </div>
                                 <div class="col-md-12">
                                     <button class="thm-btn yellow-bg" type="submit" onclick="query_submit()">
