--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div id="slider1" class="rev_slider" data-version="5.0">
             <ul>
                 <li data-transition="slidingoverlayleft">
-                    <img src="img/slides/1.jpg" alt="" width="1920" height="580" data-bgposition="top center"
+                    <img src="img/slides/test.jpeg" alt="" width="1920" height="450" data-bgposition="top center"
                         data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
 
                     <div class="tp-caption tp-resizeme" data-x="right" data-hoffset="0" data-y="center"
@@ -621,7 +621,7 @@
     <section class="brand-area">
         <div class="container">
             <div class="sec-title">
-                <h1>Major Testing</h1>
+                <h1>Major Testing Done</h1>
             </div>
             <div class="row">
                 <div class="col-md-12">
