--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
         <div id="slider1" class="rev_slider" data-version="5.0">
             <ul>
                 <li data-transition="slidingoverlayleft">
-                    <img src="img/slides/test.jpeg" alt="" width="1920" height="450" data-bgposition="top center"
+                    <img src="img/slides/test.jpeg" alt="" width="1920" height="580" data-bgposition="center center"
                         data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
 
                     <div class="tp-caption tp-resizeme" data-x="right" data-hoffset="0" data-y="center"
                         data-voffset="-4" data-transform_idle="o:1;"
-                        data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:3000;e:Power3.easeOut;"
+                        data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:7000;e:Power3.easeOut;"
                         data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
                         data-mask_in="x:[100%];y:0;s:inherit;e:inherit;" data-splitin="none" data-splitout="none"
                         data-start="500">
@@ -108,7 +108,7 @@
                     </div>
                 </li>
                 <li data-transition="slidingoverlayleft">
-                    <img src="img/slides/2.jpg" alt="" width="1920" height="580" data-bgposition="top center"
+                    <img src="img/slides/test-2.png" alt="" width="1920" height="580" data-bgposition="center center"
                         data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
 
                     <div class="tp-caption  tp-resizeme" data-x="left" data-hoffset="0" data-y="top" data-voffset="125"
@@ -137,7 +137,7 @@
                     </div>
                 </li>
                 <li data-transition="slidingoverlayleft">
-                    <img src="img/slides/3.jpg" alt="" width="1920" height="580" data-bgposition="top center"
+                    <img src="img/slides/test-3.png" alt="" width="1920" height="580" data-bgposition="center center"
                         data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
 
                     <div class="tp-caption tp-resizeme" data-x="center" data-hoffset="0" data-y="center"
@@ -188,7 +188,7 @@
     <!--Start about us area-->
     <section class="about-us-area">
         <div class="outer-box clearfix">
-            <div class="image-column" style="background-image:url(img/about/bg-image.jpg);">
+            <div class="image-column" style="background-image:url(img/about/about-image.jpg);">
                 <ul class="icon-box" role="tablist">
                     <li class="single-item active" data-tab-name="about">
                         <a href="#about" aria-controls="about" role="tab" data-toggle="tab" class="clearfix">
@@ -344,11 +344,9 @@
                                                         aria-hidden="true"></i></a></li>
                                             </li>
                                             <li>
-                                                <a 
-                                                    href="https://home.iitm.ac.in/aruls/"
-                                                    target="_blank"><i class="fa fa-user"
-                                                        aria-hidden="true"></i></a>
-                                            </li>   
+                                                <a href="https://home.iitm.ac.in/aruls/" target="_blank"><i
+                                                        class="fa fa-user" aria-hidden="true"></i></a>
+                                            </li>
                                             </li>
                                         </ul>
                                     </div>
@@ -514,108 +512,6 @@
         </div>
     </section>
     <!--End services area-->
-
-    <!--Start testimonial area-->
-    <section class="testimonial-area">
-        <div class="container">
-            <div class="sec-title center text-center">
-                <h1>Latest news</h1>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="testimonials-item">
-                        <!--Start single testimonial item-->
-                        <div class="single-testimonial-item">
-                            <div class="text-box">
-                                <p>Installation of a new testing facility for Mirror glass.</p>
-                            </div>
-                            <div class="img-box">
-                                <img src="img/latest-news/Picture1.jpg" alt="Client Photo">
-                            </div>
-                            <!-- <div class="title-box text-center">
-                                <h4>William Susante</h4>
-                                <p>ECo System</p>
-                            </div> -->
-                        </div>
-                        <!--End single testimonial item-->
-                        <!--Start single testimonial item-->
-                        <div class="single-testimonial-item">
-                            <div class="text-box">
-                                <p>Professors and Students from different states of India and different countries
-                                    visited SGRT.</p>
-                            </div>
-                            <div class="img-box">
-                                <img src="img/latest-news/Picture2.jpg" alt="Client Photo">
-                            </div>
-                            <!-- <div class="title-box text-center">
-                                <h4>John Meckency</h4>
-                                <p>Villo Steels</p>
-                            </div> -->
-                        </div>
-                        <!--End single testimonial item-->
-                        <!--Start single testimonial item-->
-                        <div class="single-testimonial-item">
-                            <div class="text-box">
-                                <p>Ms Sasi Regama M, an UG student has undergone a training session at SGRT for 15 days
-                                    under the guidance of Prof (Dr) Alagappan Ponnalagu, IIT Madras.</p>
-                            </div>
-                            <div class="img-box">
-                                <img src="img/latest-news/Picture3.jpg" alt="Client Photo">
-                            </div>
-                            <!-- <div class="title-box text-center">
-                                <h4>Thomas Fernando</h4>
-                                <p>Future Theme</p>
-                            </div> -->
-                        </div>
-                        <!--End single testimonial item-->
-                        <!--Start single testimonial item-->
-                        <div class="single-testimonial-item">
-                            <div class="text-box">
-                                <p>SGRT visits Winwall’s testing facility.</p>
-                            </div>
-                            <div class="img-box">
-                                <img src="img/latest-news/Picture4.jpg" alt="Client Photo">
-                            </div>
-                            <!-- <div class="title-box text-center">
-                                <h4>William Susante</h4>
-                                <p>ECo System</p>
-                            </div> -->
-                        </div>
-                        <!--End single testimonial item-->
-                        <!--Start single testimonial item-->
-                        <div class="single-testimonial-item">
-                            <div class="text-box">
-                                <p>CSIR-CECRI scientists visited SGRT.</p>
-                            </div>
-                            <div class="img-box">
-                                <img src="img/latest-news/Picture5.jpg" alt="Client Photo">
-                            </div>
-                            <!-- <div class="title-box text-center">
-                                <h4>John Meckency</h4>
-                                <p>Villo Steels</p>
-                            </div> -->
-                        </div>
-                        <!--End single testimonial item-->
-                        <!--Start single testimonial item-->
-                        <div class="single-testimonial-item">
-                            <div class="text-box">
-                                <p>Professionals from L&T visited SGRT.</p>
-                            </div>
-                            <div class="img-box">
-                                <img src="img/latest-news/Picture6.jpg" alt="Client Photo">
-                            </div>
-                            <!-- <div class="title-box text-center">
-                                <h4>Thomas Fernando</h4>
-                                <p>Future Theme</p>
-                            </div> -->
-                        </div>
-                        <!--End single testimonial item-->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--End testimonial area-->
 
     <!--Start Brand area-->
     <section class="brand-area">
