Added image in testing facilities screen

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <ul>
                 <li data-transition="slidingoverlayleft">
                     <img src="img/slides/test.jpeg" alt="" width="1920" height="580" data-bgposition="center center"
-                        data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
+                        data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg contain" data-bgparallax="1">
 
                     <div class="tp-caption tp-resizeme" data-x="right" data-hoffset="0" data-y="center"
                         data-voffset="-4" data-transform_idle="o:1;"
@@ -109,7 +109,7 @@
                 </li>
                 <li data-transition="slidingoverlayleft">
                     <img src="img/slides/test-2.png" alt="" width="1920" height="580" data-bgposition="center center"
-                        data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
+                        data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg contain" data-bgparallax="1">
 
                     <div class="tp-caption  tp-resizeme" data-x="left" data-hoffset="0" data-y="top" data-voffset="125"
                         data-transform_idle="o:1;"
