--- a/testing-facilities.html
+++ b/testing-facilities.html
@@ -219,8 +219,7 @@
                                                     standards like ASTM, ANSI, EN, DIN, ISO, JIS etc.</p>
                                             </div>
                                             <div class="img-holder">
-                                                <img src="img/solution-single/solution-v2-1.jpg" alt="Awesome Image">
-                                                <img src="img/solution-single/solution-v2-1.jpg" alt="Awesome Image">
+                                                <img src="img/testing-facilities/FLOAT_GLASS.png" alt="Awesome Image">
                                             </div>
                                         </div>
                                     </div>
@@ -284,8 +283,7 @@
                                                     standards like ASTM, ANSI, EN, DIN, ISO, JIS etc.</p>
                                             </div>
                                             <div class="img-holder">
-                                                <img src="img/solution-single/solution-v2-1.jpg" alt="Awesome Image">
-                                                <img src="img/solution-single/solution-v2-1.jpg" alt="Awesome Image">
+                                                <img src="img/testing-facilities/HEAT_STRENGTHENED_GLASS.png" alt="Awesome Image">
                                             </div>
                                         </div>
                                     </div>
@@ -349,8 +347,7 @@
                                                     standards like ASTM, ANSI, EN, DIN, ISO, JIS etc.</p>
                                             </div>
                                             <div class="img-holder">
-                                                <img src="img/solution-single/solution-v2-1.jpg" alt="Awesome Image">
-                                                <img src="img/solution-single/solution-v2-1.jpg" alt="Awesome Image">
+                                                <img src="img/testing-facilities/TOUGHENED_GLASS.png" alt="Awesome Image">
                                             </div>
                                         </div>
                                     </div>
@@ -413,8 +410,7 @@
                                                     standards like ASTM, ANSI, EN, DIN, ISO, JIS etc.</p>
                                             </div>
                                             <div class="img-holder">
-                                                <img src="img/solution-single/solution-v2-1.jpg" alt="Awesome Image">
-                                                <img src="img/solution-single/solution-v2-1.jpg" alt="Awesome Image">
+                                                <img src="img/testing-facilities/LAMINATED_GLASS.png" alt="Awesome Image">
                                             </div>
                                         </div>
                                     </div>
@@ -474,8 +470,7 @@
                                                     standards like ASTM, ANSI, EN, DIN, ISO, JIS etc.</p>
                                             </div>
                                             <div class="img-holder">
-                                                <img src="img/solution-single/solution-v2-1.jpg" alt="Awesome Image">
-                                                <img src="img/solution-single/solution-v2-1.jpg" alt="Awesome Image">
+                                                <img src="img/testing-facilities/IGU.png" alt="Awesome Image">
                                             </div>
                                         </div>
                                     </div>
