--- a/testing-facilities.html
+++ b/testing-facilities.html
@@ -62,13 +62,13 @@
                                 <ul class="navigation">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">About</a></li>
-                                    <li class="dropdown current"><a href="services.html">Services</a>
+                                    <!-- <li class="dropdown current"><a href="services.html">Services</a>
                                         <ul>
                                             <li><a href="testing-facilities.html">Testing Facilities</a></li>
                                             <li><a href="research-consultancy.html">Research & Consultancy</a></li>
                                             <li><a href="training-industrial-visit-awareness.html">Training, Industrial Visit and Awareness</a></li>
                                         </ul>
-                                    </li>
+                                    </li> -->
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
