--- a/index.html
+++ b/index.html
@@ -1318,7 +1318,7 @@
             document.getElementById("spinner").style.display = 'block';
             $.ajax({
                 type: "POST",
-                url: 'https://https://sgrt-iitm.onrender.com/api/details-query',
+                url: 'https://sgrt-iitm.onrender.com/api/details-query',
                 data: requestData,
                 dataType: "json",
                 success: function (res) {
@@ -1494,7 +1494,7 @@
 
             $.ajax({
                 type: "POST",
-                url: 'https://https://sgrt-iitm.onrender.com/api/submit-query',
+                url: 'https://sgrt-iitm.onrender.com/api/submit-query',
                 data: data,
                 dataType: "json",
                 success: function (res) {
