Minor fixes in styles

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     <!--End about us area-->
 
     <!--Start services area-->
-    <section class="services-area">
+    <section style="display: none;" class="services-area">
         <div class="container">
             <div class="sec-title">
                 <!-- <p>What We Do For You</p> -->
@@ -515,7 +515,7 @@
 
     <!--Start education area-->
     <section class="services-area">
-        <div class="container">
+        <div class="container mt-2">
             <div class="sec-title">
                 <h1>Education</h1>
             </div>
